kano-settings (4.0.1-0) unstable; urgency=low

  * Disable bootup sound init script, as alsa driver is disabled

 -- Team Kano <dev@kano.me>  Thu 13 Jul 2017 17:41:09 +0100

kano-settings (4.0.0-0) unstable; urgency=low

  * Add Speed up boot times into Dashboard

 -- Team Kano <dev@kano.me>  Thu 25 May 2017 16:38:00 +0100

kano-settings (3.9.1-1) unstable; urgency=low

  * Add API to detect the Kano Screen Kit

 -- Team Kano <dev@kano.me>  Thu 30 Mar 2017 17:24:00 +0100

kano-settings (3.9.0-1) unstable; urgency=low

  * Add Minecraft local hostname

 -- Team Kano <dev@kano.me>  Tue 13 Dec 2016 13:08:00 +0000

kano-settings (3.8.0-1) unstable; urgency=low

  * Add kano-boot-check command to check for improper shutdown.

 -- Team Kano <dev@kano.me>  Thu 13 Oct 2016 17:47:00 +0100

kano-settings (3.7.0-1) unstable; urgency=low

  * i18n setup and Spanish translations

 -- Team Kano <dev@kano.me>  Tue, 27 Sep 2016 11:30:00 +0100

kano-settings (3.2.0-1) unstable; urgency=low

  * Remove kano_settings.system.advanced.set_user_cookies API

 -- Team Kano <dev@kano.me>  Thu, 5 May 2016 11:00:00 +0100

kano-settings (2.3.0-1) unstable; urgency=low

  * Extending the wallpaper settings API with a getter function

 -- Team Kano <dev@kano.me>  Wed, 20 Jan 2016 15:44:00 +0000

kano-settings (2.2-4) unstable; urgency=low

  * Change config API to use a transactional approach

 -- Team Kano <dev@kano.me>  Fri, 15 Jan 2016 11:00:00 +0000

kano-settings (2.2-3) unstable; urgency=low

  * Add kano-checked-reboot

 -- Team Kano <dev@kano.me>  Thu, 07 Jan 2016 19:18:00 +0000

kano-settings (2.2-2) unstable; urgency=low

  * Changes on Parental Control

 -- Team Kano <dev@kano.me>  Thu, 24 Sep 2015 17:22:00 +0000

kano-settings (2.2-1) unstable; urgency=low

  * Adding Gtk.Plug support

 -- Team Kano <dev@kano.me>  Wed, 26 Aug 2015 17:22:00 +0000

kano-settings (2.0-3) unstable; urgency=low

  * Add Midori/Youtube cookie functionality
