@@ -1,6 +1,7 @@
 kano-settings (4.0.1-0) unstable; urgency=low
 
   * Disable bootup sound init script, as alsa driver is disabled
+  * Added the new Matrix screen saver selection into kano-settings
 
  -- Team Kano <dev@kano.me>  Thu 13 Jul 2017 17:41:09 +0100
 
